starting with the fonts

--- a/theme.css
+++ b/theme.css
@@ -10,6 +10,24 @@ body {
 	--slider-thumb-radius: 0px;
 }
 
+// font stuff
+@font-face {
+	font-family: 'Old Newspaper Types';
+	src: url('./fonts/OldNewspaperTypes.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('./fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	font-style: italic;
+	src: url('./fonts/Montserrat-Italic-VariableFont_wght.ttf') format('truetype');
+}
+
+
 .workspace-tab-header.is-active::before, .workspace-tab-header.is-active::after {
 	display: none;
 }
@@ -31,4 +49,30 @@ svg * {
 
 .menu-separator {
 	margin: var(--size-2-1) calc(var(--size-2-1) * -1);
+}
+
+
+/* Import the fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+/* H1 styling */
+h1 {
+	font-family: 'Old Newspaper Types', serif;
+	color: white;
+	background-color: black;
+	padding: var(--size-4-2) var(--size-4-3);
+	display: inline-block;
+}
+
+/* H2 styling */
+h2 {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+/* Body text styling */
+body {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
 }
